dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during Tcl installation
dnl	to configure the system for the local environment.
# RCS: $Header: /cvs/tcl/tls/unix/configure.in,v 1.3 1999/09/06 19:25:33 matt Exp $

AC_INIT(../generic/tls.h)

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi
SRC_DIR=`cd $srcdir/..; pwd`

if test -r "$prefix/lib/tclConfig.sh"; then
    . $prefix/lib/tclConfig.sh
    AC_MSG_RESULT(using $prefix/lib/tclConfig.sh)
else
    AC_ERROR(count not find lib/tclConfig.sh in $prefix)
fi

PACKAGE=tls
#
# Fetch major/minor version from main header file
#
eval `egrep '^#define TLS_VERSION' ../generic/tls.h | \
	sed -e 's/#define TLS_//' -e 's/[ 	]*"/="/'`
MAJOR_VERSION=`echo $VERSION | sed -e 's/\..*//'`
MINOR_VERSION=`echo $VERSION | sed -e 's/.*\.//'`

SSL_DIR='/usr/local/openssl'

AC_ARG_WITH(ssl-dir, [  --with-ssl-dir=DIR  SSL root directory], SSL_DIR=$withval)

if test -z "$SSL_DIR"; then
    AC_ERROR(must specify SSL directory)
fi
if test ! -f $SSL_DIR/include/openssl/opensslv.h; then
    AC_ERROR(bad ssl-dir: cant find opensslv.h)
fi

eval "LIB_FILE=lib${PACKAGE}${TCL_SHARED_LIB_SUFFIX}"

AC_SUBST(PROGS)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PATCH_LEVEL)
AC_SUBST(LIB_FILE)
AC_SUBST(SSL_DIR)

AC_SUBST(TCL_VERISON)
AC_SUBST(TCL_PREFIX)
AC_SUBST(TCL_EXEC_PREFIX)
AC_SUBST(TCL_EXTRA_FLAGS)
AC_SUBST(TCL_INC_DIR)
AC_SUBST(TCL_LIB_DIR)
AC_SUBST(TCL_LIB_SPEC)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_CC)
AC_SUBST(TCL_RANLIB)
AC_SUBST(TCL_DEFS)
AC_SUBST(TCL_LD_FLAGS)
AC_SUBST(TCL_LD_SEARCH_FLAGS)
AC_SUBST(TCL_SHLIB_SUFFIX)
AC_SUBST(TCL_SHLIB_CFLAGS)
AC_SUBST(TCL_SHLIB_LD)
AC_SUBST(TCL_SHLIB_LD_LIBS)
AC_SUBST(TCL_SRC_DIR)
AC_SUBST(TCL_COMPAT_OBJS)

AC_OUTPUT(Makefile pkgIndex.tcl)
